objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AccountID18__c</fullName>
        <description>Provides the 18 character unique ID</description>
        <formula>CASESAFEID(AccountId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Agent_Id__c</fullName>
        <description>this is the concatination of Agency Id and Agent Id</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Agency Agent Id</label>
        <length>22</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Agent_ID__c</fullName>
        <description>This field will be used only by Community user contact record type.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Agent ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_NPN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>National Producer Number</inlineHelpText>
        <label>Broker NPN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Rating__c</fullName>
        <description>Ratings assigned to a Broker</description>
        <inlineHelpText>5 Being the best</inlineHelpText>
        <label>Broker Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Broker_Service_Team_2_50_roll_up__c</fullName>
        <description>This field will be updated from Process builder fired from Community Contact. 
Should be read-only from page layout(s)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Broker Service Team 2-50</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Service_Team_51_roll_up__c</fullName>
        <description>This field will be updated from Process builder fired from Community Contact. 
Should be read-only from page layout(s)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Broker Service Team 51+</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Service_Team__c</fullName>
        <formula>IF(ISBLANK(X2_50_Account__r.Broker_Service_Team__c), X51_Account__r.Broker_Service_Team__c, X2_50_Account__r.Broker_Service_Team__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker Service Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Client_Golf_Outing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to identify customer golf outing events</description>
        <label>CF Client Golf Outing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ciam_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ciam Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_User_Type__c</fullName>
        <label>Community User Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Broker Agent</fullName>
                </value>
                <value>
                    <fullName>Assistant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contracts_for_Year__c</fullName>
        <label>Contracts for Year</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,"All Contact Details Captured", "Missing: "&amp;IF( LEN( Phone ) = 0, "Phone, ","")&amp;""&amp;IF(LEN( Email) = 0, "Email, ","")&amp;""&amp;IF( LEN( MailingStreet ) = 0, "Complete Address, ","")&amp;""&amp;IF( LEN(Title) = 0, "Job Title, ","")&amp;""&amp;IF( ISPICKVAL( Salutation,""), "Salutation",""))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN( Phone) = 0, 0,20) + IF( LEN( Email) = 0, 0,20) + IF( LEN(MailingStreet) = 0, 0,20) + IF( LEN(Title) = 0, 0,20) + IF( ISPICKVAL(Salutation,""), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employer_Group_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to identify a contact that will have access to the emloyer portal</description>
        <label>Employer Group Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entity_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Entity ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Type_SB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entity Type : SB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>HYPERLINK('/' + Id, FirstName + ' ' + LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Groups_for_Year__c</fullName>
        <label>Groups for Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecType_Broker_NPN__c</fullName>
        <description>This field will hold the Broker NPN concatenated with the record type name and this will be a unique field and used as external Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>RecType Broker NPN</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RecType_Entity_ID__c</fullName>
        <description>This will be a field that will hold the concatination of recordtype +"_"+entity Id</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>RecType_Entity_ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SBU_Market_Segment__c</fullName>
        <inlineHelpText>This field is used by the apex batch jobs to update the  values for the Qualtrics Surveys</inlineHelpText>
        <label>SBU/Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>200+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SB_Rank__c</fullName>
        <label>SB Rank</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_Level_2_50__c</fullName>
        <formula>IF(NOT(ISBLANK(X2_50_Account__c)), Text(X2_50_Account__r.Tier_Level__c), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier Level  2-50</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_Level_2_50_roll_up__c</fullName>
        <description>This field will be updated from Process builder fired from Community Contact.
Should be read-only from page layout(s)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Tier Level 2-50</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_Level_51__c</fullName>
        <formula>IF(NOT(ISBLANK(X51_Account__c)), Text(X51_Account__r.Tier_Level__c), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier Level  51+</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_Level_51_roll_up__c</fullName>
        <description>This field will be updated from Process builder fired from Community Contact. 
Should be read-only from page layout(s)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Tier Level 51+</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_Level__c</fullName>
        <formula>IF(ISBLANK( Tier_Level_2_50__c ), Tier_Level_51__c, Tier_Level_2_50__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopAccount__c</fullName>
        <formula>TEXT( Account.Top_Account__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TopAccount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidateCompleteness__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temporary field used in the data clean up/competion effort.</description>
        <label>ValidateCompleteness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2_50_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to tie a contact to a 2-50 Account based on entity id. this is used in the back end for 360 degree view of case</description>
        <label>2-50 Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>2-50</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>2-50 Community Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X2_50_Contact_ID__c</fullName>
        <formula>X2_50_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2-50 Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2_50_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to tie a contact to a 2-50 Contact based on entity id. this is used in the back end for 360 degree view of case</description>
        <label>2-50 Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>2-50</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>2-50 Community Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X51_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to tie a contact to a 51+  Partner Account based on entity id. this is used in the back end for 360 degree view of case</description>
        <label>51+Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>51+</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>51+ Community Contact</relationshipLabel>
        <relationshipName>Account51</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X51_Contact_ID__c</fullName>
        <formula>X51_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>51+ Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X51_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to tie a contact to a 51+ partner Account based on entity id. this is used in the back end for 360 degree view of case</description>
        <label>51+Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>51+</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>51+ Community Contact</relationshipLabel>
        <relationshipName>Contacts51</relationshipName>
        <type>Lookup</type>
    </fields>
    <sharingModel>Read</sharingModel>
    <listViews>
        <fullName>All_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <sharedTo>
            <roleAndSubordinatesInternal>SFDCBlackberryTech</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>VicePresidentandStaffLaborSales</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>VicePresidentsandStaff</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>X2_50_Role</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Community_All_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>X2_50_Contact__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>X2_50_Account__c</columns>
        <columns>X51_Account__c</columns>
        <columns>X51_Contact__c</columns>
        <columns>Community_User_Type__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Community_User_Contact</value>
        </filters>
        <label>Community All Contacts</label>
        <sharedTo>
            <roleAndSubordinatesInternal>SBU_Accounts_Service_Rep</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SBU_Management</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SBU_Service</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SBU_Staff_and_Assistants</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contacts_with_EGP_Checked</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employer_Group_Portal__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Contacts with EGP Checked</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Contact.X2_50</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>pproc</value>
        </filters>
        <label>New Last Week</label>
        <sharedTo>
            <roleAndSubordinatesInternal>VicePresidentandStaffLaborSales</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>VicePresidentsandStaff</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>X2_50_Role</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Entity_Type_SB__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Contact.X2_50</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notContain</operation>
            <value>sproc,pproc</value>
        </filters>
        <label>New This Week</label>
        <sharedTo>
            <roleAndSubordinatesInternal>VicePresidentandStaffLaborSales</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>VicePresidentsandStaff</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>X2_50_Role</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Qualtrics_Survey_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TopAccount__c</columns>
        <columns>SBU_Market_Segment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TopAccount__c</field>
            <operation>equals</operation>
            <value>No</value>
        </filters>
        <filters>
            <field>SBU_Market_Segment__c</field>
            <operation>equals</operation>
            <value>200+</value>
        </filters>
        <label>Qualtrics Survey Contacts</label>
        <sharedTo>
            <group>Qualitrics_Contact</group>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2_50_All_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.X2_50</value>
        </filters>
        <label>2-50 All Contacts</label>
        <sharedTo>
            <roleAndSubordinatesInternal>VicePresidentandStaffLaborSales</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>VicePresidentsandStaff</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>X2_50_Role</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X51_All_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.X51</value>
        </filters>
        <label>51+ All Contacts</label>
        <sharedTo>
            <roleAndSubordinatesInternal>VicePresidentandStaffLaborSales</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>VicePresidentsandStaff</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>X2_50_Role</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X51_contact_without_acct</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.X51</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
        </filters>
        <label>51+ contact without acct</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Community_User_Contact</fullName>
        <active>true</active>
        <description>This is the record type that will be used for community User Creation</description>
        <label>Community User Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2_50</fullName>
        <active>true</active>
        <label>2-50</label>
    </recordTypes>
    <recordTypes>
        <fullName>X51</fullName>
        <active>true</active>
        <label>51+</label>
    </recordTypes>
    <validationRules>
        <fullName>E001_Account_Required</fullName>
        <active>true</active>
        <description>Account Name is a required field</description>
        <errorConditionFormula>NOT($Permission.Ignore_Validation_Rules) &amp;&amp; ISBLANK( AccountId ) &amp;&amp; Not( RecordType.DeveloperName = 'Community_User_Contact')</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>001: Account Name is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>E002_Phone_Required</fullName>
        <active>true</active>
        <description>Phone is a required field with an exception for Username prefix for SPMSS or ProvisionUser processes. - Updated 5/19/17 - KG</description>
        <errorConditionFormula>AND(
NOT(
OR(
   BEGINS($User.Username, "spmss.process@carefirst"),        BEGINS($User.Username,"provisionuser.process@carefirst.com")
))
, 

ISBLANK(Phone)

)</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>002: Phone is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>E003_Email_Required</fullName>
        <active>true</active>
        <description>Email is a required field</description>
        <errorConditionFormula>NOT(BEGINS($User.Username, "spmss.process@carefirst.com")) &amp;&amp; ISBLANK(Email)&amp;&amp;
RecordType.DeveloperName ='X51'</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>003: Email is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ECON004</fullName>
        <active>true</active>
        <description>This Validation will not allow a 2-50  record created by spassy to be edited by anyone except one user (Spms process user)</description>
        <errorConditionFormula>And(RecordType.DeveloperName ='X2_50', NOT(BEGINS($User.Username, "spmss.process@carefirst.com")), BEGINS( CreatedBy.Username , "spmss.process@carefirst.com"), (OR(ISCHANGED(    AccountId    ), ISCHANGED(   Entity_ID__c   ),ISCHANGED(   MailingCity  ),ISCHANGED(    MailingCountry    ),ISCHANGED(    MailingState    ),ISCHANGED(    MailingStreet    ),ISCHANGED(     MailingPostalCode     ),ISCHANGED(     Entity_Type_SB__c     ),ISCHANGED(    Email    ),ISCHANGED(  Phone  ),ISCHANGED(   LastName   ),ISCHANGED(    FirstName    ))))

/*
And(NOT(ISBLANK( Entity_ID__c )), NOT(BEGINS($User.Username, "spmss.process@carefirst.com")), (OR(ISCHANGED(    AccountId    ), ISCHANGED(   Entity_ID__c   ),ISCHANGED(   MailingCity  ),ISCHANGED(    MailingCountry    ),ISCHANGED(    MailingState    ),ISCHANGED(    MailingStreet    ),ISCHANGED(     MailingPostalCode     ),ISCHANGED(     Entity_Type_SB__c     ),ISCHANGED(    Email    ),ISCHANGED(  Phone  ),ISCHANGED(   LastName   ),ISCHANGED(    FirstName    ))))
*/</errorConditionFormula>
        <errorMessage>CON004:This Record is not editable. Please contact your System Administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ECON005</fullName>
        <active>true</active>
        <description>This rule will not allow a 2-50 user to edit the 51+ user record.</description>
        <errorConditionFormula>AND( $Profile.Name = '2-50 Standard User - Custom', RecordType.DeveloperName ='X51')</errorConditionFormula>
        <errorMessage>ECON005: You are not authorized to edit the 51+ Contact.Please contact your System Administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ECON006</fullName>
        <active>true</active>
        <description>This rule will not allow a 51+ user to edit the 2-50 user record.</description>
        <errorConditionFormula>AND( $Profile.Name = '51+ Standard User - Custom', RecordType.DeveloperName ='X2_50')</errorConditionFormula>
        <errorMessage>ECON006: You are not authorized to edit the 2-50 Contact.Please contact your System Administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ECON007</fullName>
        <active>true</active>
        <description>This rule will not allow for association of a 51+ contact with 2-50 account or a 2-50 contact with a 51+ account</description>
        <errorConditionFormula>NOT($Permission.Ignore_Validation_Rules) &amp;&amp; 
((Account.RecordType.DeveloperName = 'X51' &amp;&amp;              RecordType.DeveloperName ='X2_50') ||
(Account.RecordType.DeveloperName = 'X2_50' &amp;&amp; RecordType.DeveloperName ='X51'))</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>ECON007: Account Record Type Does not Match. Please Choose the correct Account Record Type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ECON008</fullName>
        <active>true</active>
        <description>Email is a required field</description>
        <errorConditionFormula>NOT($Permission.Ignore_Validation_Rules) &amp;&amp; ISBLANK(Email)&amp;&amp;
RecordType.DeveloperName ='Community_User_Contact'</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>ECON008: Email is required</errorMessage>
    </validationRules>
</CustomObject>